--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff5c53', end
 }
 
 .navbar-default {
-    background-color: transparent;
+    background-color: #ff5c52;
     border-color: transparent;
 }
 
@@ -62,6 +62,15 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff5c53', end
     padding-top: 15px;
     padding-bottom: 15px;
 }
+
+.bootstrap-switch .bootstrap-switch-handle-off.bootstrap-switch-primary, .bootstrap-switch .bootstrap-switch-handle-on.bootstrap-switch-primary {
+    background-color: #ff4439;
+}
+
+.white-bg {
+    background-color: #fff;
+    color: #ff4439;
+}
 /* SCREEN 1. WELCOME SCREEN */
 
 #welcome-img {width:70%}
@@ -69,11 +78,12 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff5c53', end
 /* SCREEN 2. MAP */
 .map {
     position:absolute;
-    top: 50px;
+    top: 0;
     right:0;
     left:0;
     bottom: 0;
     z-index: -10;
+    overflow: hidden;
 }
 
 #map-screen-1 {
@@ -88,22 +98,34 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff5c53', end
     top: 50px;
     right:0;
     left:0;
-    bottom: 0;
+    bottom: 52px;
     z-index: -1;
 }
 
 #map-screen-2 {
     background-color: rgba(27, 77, 123, 0.8);
     background: rgba(27, 77, 123, 0.8);
+    color: #fff;
     
     position:absolute;
     top: 50px;
     right:0;
     left:0;
-    bottom: 0;
+    bottom: 52px;
     z-index: -1;
 }
 
-#map-screen-2 h3 {
+#profile {
+    background-color: rgba(27, 77, 123, 0.8);
+    background: rgba(27, 77, 123, 0.8);
     color: #fff;
+    
+    position:absolute;
+    top: 50px;
+    right:0;
+    left:0;
+    bottom: 52px;
+    z-index: -1;
+    
+    overflow: scroll;
 }
