--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,10 @@ a {
     color:#fff;
 }
 
+a.red-link {
+    color:#ff4439;
+}
+
 a:hover {
     color:#fff;
 }
@@ -142,4 +146,18 @@ a:hover {
     float:left;
     color:#fff;
     margin-left: 10px;
+}
+
+#msg {
+    background-color: #fff;
+    color: #ff4439;
+    
+    position:absolute;
+    top: 50px;
+    right:0;
+    left:0;
+    bottom: 52px;
+    z-index: -1;
+    
+    overflow: scroll;
 }
